# schema/src/swagger.yaml
@@ -36,7 +36,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/UserRegister"
+              $ref: "#/components/schemas/UserRegisterData"
       responses:
         200:
           description: ""
@@ -57,7 +57,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/UserLogin"
+              $ref: "#/components/schemas/UserLoginData"
       responses:
         200:
           description: success
@@ -91,7 +91,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/ChatCreate"
+              $ref: "#/components/schemas/ChatCreateData"
       responses:
         200:
           description: ""
@@ -161,7 +161,7 @@ components:
       required:
         - id
         - username
-    UserRegister:
+    UserRegisterData:
       type: object
       properties:
         username:
@@ -171,7 +171,7 @@ components:
       required:
         - username
         - password
-    UserLogin:
+    UserLoginData:
       type: object
       properties:
         username:
@@ -205,7 +205,7 @@ components:
       required:
         - id
         - name
-    ChatCreate:
+    ChatCreateData:
       type: object
       properties:
         name:
